* Changelog
  All notable changes to this project will be documented in this file.

  This log is kept according to the [[http://keepachangelog.com/][Keep a CHANGELOG]] manifesto
** 0.6.0                  					 :unreleased:
*** Added
    - Nothing
*** Deprecated
    - Nothing
*** Removed
    - Nothing
*** Fixed
    - Return to right window before setting todo (closes issue #220)
** 0.5.0 <2015-10-10 Sat>							 :released:
*** Added
    - show link description in headings when folded, instead of the whole
      link
    - add simplified mappings to create new headings with
      [<localleader>|<leader>]<CR>
    - improve incrementing and decrementing of list items
    - moved changelog information to its own file
    - add tests for the tags plugin
    - copy type and indentation when creating new list items
    - increase/decrease ordered list when adding new items
    - add support for alphanumeric ordered lists
    - add test cases for overlapping mappings
    - add three dots after folded text, like in orgmode
    - improve highlighting of org-mode properties (closes issue #130)
    - implement global visibility as it works in Emacs org-mode (closes issue
      #119)
    - improve detection of speeddating plugin (closes issue #121)
    - add support for high speed searching of headings that use certain tags
      (closes issue #58)
    - make echo, echom and echoe split messages a line ends and execute a
      single vim command for each line
    - add export commands OrgExportToPDF and OrgExportToHTML (closes issue
      #107)
    - add variables for customizing the export via Emacs: g:org_export_emacs,
      g:org_export_verbose, g:org_export_init_script (closes issue #107)
    - switch to subprocess.Popen for Emcas export (closes issue #107)
    - add defaults and examples for all variables
    - add support for inserting new checkboxes with the same keybinging as
      inserting new headings (thanks to Powen Tan)