@@ -112,26 +112,31 @@ via the 'Org' menu. Most are only usable in command mode.
     <TAB>           - Cycle Visibility
 
   Editing Structure:~
-    <C-S-CR>        - insert heading above
-    <S-CR>          - insert heading below
-    <CR>            - insert heading below
-    <C-CR>          - insert heading above, after children
+    In GVIM:~
+      <C-S-CR>        - insert heading above
+      <S-CR>          - insert heading below, taking over children
+      <CR>            - insert heading below, taking over children
+      <C-CR>          - insert heading above, after children
+    In general Vim Versions:~
+      <localleader>hN  - insert heading above
+      <localleader>hh  - insert heading below, taking over children
+      <localleader>hn  - insert heading above, after children
 
-    m}              - move heading down
-    m{              - move heading up
-    m]]             - move subtree down
-    m[[             - move subtree up
+      m}              - move heading down
+      m{              - move heading up
+      m]]             - move subtree down
+      m[[             - move subtree up
 
-    yah             - yank heading
-    dah             - delete heading
-    yar             - yank subtree
-    dar             - delete subtree
-    p               - paste subtree
+      yah             - yank heading
+      dah             - delete heading
+      yar             - yank subtree
+      dar             - delete subtree
+      p               - paste subtree
 
-    >> or >ah       - demote heading
-    << or <ah       - promote heading
-    >ar             - demote subtree
-    <ar             - promote subtree
+      >> or >ah       - demote heading
+      << or <ah       - promote heading
+      >ar             - demote subtree
+      <ar             - promote subtree
 
   Hyperlinks:~
     gl              - goto link
@@ -147,6 +152,10 @@ via the 'Org' menu. Most are only usable in command mode.
     <S-Right>       - next keyword
     <C-S-Left>      - previous keyword set
     <C-S-Right>     - next keyword set
+
+  Plain List:~
+    <localleader>cl or <CR>     - insert plainlist item below 
+    <localleader>cL or <C-S-CR> - insert plainlist item above
 
   Checkboxes:~
     <localleader>cc             - toggle status
@@ -226,7 +235,7 @@ INSTALLATION AND UPGRADE                                 *orgguide-installation*
   are listed in the following section.
 
   Note: If you want to insert timestamp by using a calendar, you should
-  install calendar(http://www.vim.org/scripts/script.php?script_id=52) to
+  install calendar(https://github.com/mattn/calendar-vim) to
   enable this feature.
 
 ------------------------------------------------------------------------------
@@ -267,7 +276,7 @@ Suggested plugins~
     Easy management of multiple vim plugins.
 
   calendar~
-    (http://www.vim.org/scripts/script.php?script_id=52)
+    (https://github.com/mattn/calendar-vim)
     This plugin will create a calendar window for timestamp insertion.
 
   SyntaxRange~
